[package]
name = "rust-websocket"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
tokio-tungstenite = "0.24.0"
env_logger = "0.11.1"
log = "0.4.22"

[lib]
name = "example_websocket"
path = "example-websocket/src/lib.rs"